# lethe

./: .gitignore  LICENSE  NEXT.md  README.md  lethe.py  pyproject.toml
lethe/: __init__.py  __main__.py  agent.py  cli.py  db.py  dsp.py  io.py  mcp_server.py  pipeline.py  ui.py
lethe/data/: schema.sql  seeds.sql
